@@ -1212,5 +1212,6 @@ nicknames with spaces are shown correctly, as well as it's possible to
 set a nickname for yourself that contains spaces. Also the nicknames on
 the list get updated as soon as a remote changes their nick.
 
-The program now compiles and works well on the MacOS X/Darwin platform.
+The program now compiles and hopefully works well on the MacOS X/Darwin
+platform.
 
